# apex

./: CMakeLists.txt  README.md  main.cpp  sample-edges  sample-edges-2
.github/workflows/: cmake.yml
Google_tests/: BitVectorTest.cpp  CMakeLists.txt  DeBruijnGraphTest.cpp  KOrderDeBruijnGraphTest.cpp  PairedDeBruijnGraphTest.cpp  WaveletTreeTest.cpp
Google_tests/lib/: CMakeLists.txt
Google_tests/lib/googletest/include/gtest/: gtest.h
graph/: DeBruijnGraph.cpp  DeBruijnGraph.h  PairedDeBruijnGraph.cpp  PairedDeBruijnGraph.h  Vertex.cpp  Vertex.h
succinct/: BWT.cpp  BWT.h  BitVector.cpp  BitVector.h  DBG.cpp  DBG.h  DeBruijnGraph.cpp  DeBruijnGraph.h  ISuccinctStructure.h  WaveletTree.cpp  WaveletTree.h
tree/: Tree.cpp  Tree.h  Vertex.cpp  Vertex.h  WaveletTree.cpp  WaveletTree.h
util/: BitVector.cpp  ISuccinctStructure.h
